fix textbox_align-items

--- a/css/style.css
+++ b/css/style.css
@@ -509,24 +509,23 @@ footer p {
     }
 
     .recommend-spot-text-box {
-        width: 64%;
-        height: 280px;
+        width: 35.97%;
+        height: 320px;
         flex-direction: column;
+        align-items: flex-start;
     }
 
     .recommend-spot-text-box .spot-name {
         height: 80px;
-        width: 100%;
+        width: auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
 
     .recommend-spot-text-box .spot-name h3 {
-        display: block;
+        display: inline-block;
         font-size: 24px;
-        width: 100%;
-        /* text-align: left; */
     }
 
     .recommend-spot-text-box h3:before {
@@ -534,8 +533,7 @@ footer p {
     }
 
     .recommend-spot-text-box {
-        padding-left: 14px;
-        padding-right: 10px;
+        padding: 0 10px 0 14px;
     }
 
     .map {
@@ -591,14 +589,11 @@ footer p {
     }
     .recommend-spot-text-box {
         height: 320px;
-        width: 76.923%;
+        width: 300px;
         box-shadow: 5px 5px #EAF8FF;
     }
     .recommend-spot-text-box .spot-name {
         height: 100px;
-    }
-    .recommend-spot-text-box p {
-        padding-left: 14px;
     }
     .recommend-spot-one {
         margin-top: 120px;
